    Closes: #811037
  * Rewrite the trigger deferred file parser from flex to manual. The format
    is very simple, and a simple hand-written parser is smaller and avoids a
    build dependency.
  * Be more strict when parsing the COLUMNS environment variable in dpkg-query.
  * Make the Architecture field mandatory on package builds.
  * Portability:
    - Move DPKG_ADMINDIR environment variable name out from update-alternatives
      code, to make life easier for non-dpkg-based systems.
    - Move alternatives temporary extension out from update-alternatives code,
      to make life easier for non-dpkg-based systems.
    - Switch start-stop-daemon on */kFreeBSD to use the low-level sysctl(3)
      interface instead of libkvm-dev.
  * Perl modules:
    - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
    - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
      CTRL_COPYRIGHT_LICENSE control block types to Dpkg::Control.
    - Make patching a file multiple times fatal for the first quilt patch in
      Dpkg::Source. Reported by Apollon Oikonomopoulos <apoikos@debian.org>.
      Closes: #810720
    - Only warn once when a diff patches a file multiple times in
      Dpkg::Source::Patch, and fix the warning message to make it clear that
      the diff might be patchig the file more than once, not just twice.
    - Check existence of search criteria in Dpkg::Index when checking with a
      regex or a string match. Closes: #780906
      Base on a patch by Daniel Dehennin <daniel.dehennin@baby-gnu.org>.
    - Add new functions to validate and parse architecture names in Dpkg::Arch.
  * Build system:
    - Fix building development documentation.
    - Remove unused UA_LIBS variable.
    - Split libps and libkvm detection into their own macros and variables.
    - Make it possible to build without system libmd.
    - Add a configuration summary to configure output.
    - Make git log invocation immune to local configuration.