@@ -51,6 +51,8 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     build dependency.
   * Be more strict when parsing the COLUMNS environment variable in dpkg-query.
   * Make the Architecture field mandatory on package builds.
+  * Use new Dpkg::Arch functions to validate and parse architectures when
+    building source packages. Closes: #784808
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
